<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.detail.DetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_photo_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:src="@drawable/ic_launcher_background"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:weightSum="2"
            android:layout_margin="@dimen/dimen_4"
            >

            <TextView
                android:id="@+id/tv_likes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_likes"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tv_likes_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="2"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2"
            android:layout_margin="4dp"
            >

            <TextView
                android:id="@+id/tv_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_comments"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_comments_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="20"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="8dp"
            >
            <TextView
                android:id="@+id/tv_pulse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/tv_pulse"
                android:textStyle="bold"
                />
            <TextView

                android:id="@+id/tv_pulse_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="60"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:weightSum="2"
            android:layout_margin="@dimen/dimen_4"
            >
            <TextView
                android:id="@+id/tv_viewed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_viewed"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_viewed_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:weightSum="2"
            android:layout_margin="@dimen/dimen_4"
            >
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_title"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_title_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Elon Musk"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:weightSum="2"
            android:layout_margin="@dimen/dimen_4"
            >
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_description"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_description_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:weightSum="2"
            android:layout_margin="@dimen/dimen_4"
            >
            <TextView
                android:id="@+id/tv_posted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_posted"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_posted_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="20:00"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:weightSum="2"
            android:layout_margin="@dimen/dimen_4"
            >
            <TextView
                android:id="@+id/tv_who"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_who"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_who_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Elon Musk"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>